Fix alignment issue with last item in family list items meta

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -622,8 +622,11 @@ ul li.selected {
     content: " \00b7";
     font-weight: normal;
   }
-  > span:last-child:after {
-    content: none;
+  > span:last-child {
+    align-self: end;
+    &:after {
+      content: none;
+    }
   }
 }
 
